# LLM-NTT-Examples

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE.md  README.md
apptainer/: llm-ntt.def
baselines/extracted-rtl/: README.md  hoge_externalproduct_ntt_1024_p64.json  hoge_nttid_1024_identity.json  hoge_streaming_intt_1024_p64.json  hoge_streaming_ntt_1024_p64.json  kyber_ntt_256_p12_pe1.json  small_hoge32_p64.json  small_yata8_raintt_p27.json  small_yata8x8_raintt_p27.json  yata_raintt_512_p27.json
docs/: apptainer.md  architecture-search-space.md  autontt-adapter.md  ntt-module-specs.md  reproduction.md  scoring.md
examples/autontt/: README.md
examples/autontt/custom_reductions/hoge_p64/: custom_red_host.txt  custom_red_kernel.txt
examples/autontt/custom_reductions/yata_p27/: README.md
examples/autontt/llm_rtl_generator/: __init__.py  autontt_space.py  behavioral_hoge.py  behavioral_yata.py  hardware_feedback.py  llm_client.py  prompting.py  runner.py
scripts/: autontt_llm_generate.py  build_and_test.sh  build_llm_ntt_sif.sh  check_autontt_hls_deps.sh  compare_autontt_metrics.py  evaluate_baselines_with_vitis.sh  evaluate_behavioral_candidates.sh  evaluate_candidate.sh  evaluate_hoge_bundle.py  evaluate_with_apptainer_and_vitis.sh  gen_verilog.sh  generate_small_ntt_rtl.py  reproduce_hls_autontt_metrics.py  run_all.sh  run_autontt_hls_harness.py  run_autontt_hls_sif_compare.sh  run_autontt_kunashiri_harness.sh  run_small_variant_hls_synth_compare.py  run_yata_hls_synth_compare.py  vitis_synth_rtl.sh
tasks/: README.md  hoge_externalproduct_ntt_1024_p64.json  hoge_nttid_1024_identity.json  hoge_streaming_intt_1024_p64.json  hoge_streaming_ntt_1024_p64.json  kyber_ntt_256_p12_pe1.json  small_hoge32_p64.json  small_yata8_raintt_p27.json  small_yata8x8_raintt_p27.json  yata_raintt_512_p27.json
tasks/planned/: hoge_externalproduct_ntt_1024_p64.json
tests/cpp/: hoge_externalproduct_ntt_reference_test.cpp  hoge_nttid_identity_test.cpp  hoge_streaming_reference_test.cpp  kyber_pe1_reference_test.cpp  small_hoge32_reference_test.cpp  small_yata_reference_test.cpp  yata_raintt_reference_test.cpp
tests/python/: test_autontt_hls_harness.py  test_autontt_metric_compare.py  test_llm_rtl_generator.py  test_reproduce_hls_autontt_metrics.py  test_small_variant_hls_synth_compare.py  test_yata_hls_synth_compare.py
variants/hoge-externalproduct/chisel/: build.sbt
variants/hoge-externalproduct/chisel/src/main/scala/: AXI4.scala  ButterflyADD.scala  Config.scala  ExternalProduct.scala
variants/hoge-nttid/chisel/src/main/scala/: NTT.scala
variants/hoge-streaming/chisel/src/main/scala/: NTT.scala
variants/hoge/chisel/: build.sbt
variants/hoge/chisel/src/main/scala/hoge/: HogeTops.scala
variants/hoge/chisel/src/main/scala/hoge/externalproduct/: AXI4.scala  ButterflyADD.scala  Config.scala  ExternalProduct.scala  INTorus.scala  NTT.scala  Util.scala
variants/hoge/chisel/src/main/scala/hoge/nttid/: ButterflyADD.scala  Config.scala  INTorus.scala  NTT.scala
variants/hoge/chisel/src/main/scala/hoge/streaming/: ButterflyADD.scala  Config.scala  INTorus.scala  NTT.scala  Util.scala
variants/hoge/chisel/src/test/scala/hoge/nttid/: NTT.scala  arithmetric.scala
variants/kyber-polmul-hw/: README.md
variants/kyber-polmul-hw/pe1/: BROM.v  KyberHPM1PE.v  addressgenerator.v
variants/kyber-polmul-hw/pe1/test_pe1/: KYBER_W.txt  KYBER_WINV.txt
variants/small-ntt/rtl/: SmallHoge32P64Rtl.sv  SmallYata8RainttP27Rtl.sv  SmallYata8x8RainttP27Rtl.sv
variants/yata-raintt/chisel/src/main/scala/: Config.scala  INTorus.scala  YataRainttTop.scala
